// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrModal.vue default open 1`] = `
<div
  class="cdr-modal"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >

      <div
        class="cdr-modal__innerWrap"
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >

                <h1>
                  Label is the modal title
                </h1>

              </div>
              <button
                aria-label="Close"
                class="cdr-button cdr-button--primary cdr-button--icon-only-medium cdr-button--icon-only cdr-button--icon-only cdr-button--with-background cdr-modal__close-button"
                type="button"
              >



                <svg
                  aria-hidden="true"
                  class="cdr-icon cdr-icon--medium cdr-icon--inherit-color"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >



                  <path
                    d="M13.415 12.006l5.295-5.292a1 1 0 00-1.414-1.415L12 10.591 6.71 5.296A1 1 0 005.295 6.71l5.292 5.295-5.295 5.292a1 1 0 101.414 1.414l5.295-5.292 5.292 5.295a1 1 0 001.414-1.414l-5.292-5.294z"
                    role="presentation"
                  />

                  <!--v-if-->
                </svg>



              </button>
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: -80px; padding-right: 0px;"
                tabindex="0"
              >

                Sticky content

              </div>
            </div>
          </div>
        </section>
      </div>

    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrModal.vue fullscreen snapshot 1`] = `
<div
  class="cdr-modal"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >

      <div
        class="cdr-modal__innerWrap"
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >

                <h1>
                  Label is the modal title
                </h1>

              </div>
              <button
                aria-label="Close"
                class="cdr-button cdr-button--primary cdr-button--icon-only-medium cdr-button--icon-only cdr-button--icon-only cdr-button--with-background cdr-modal__close-button"
                type="button"
              >



                <svg
                  aria-hidden="true"
                  class="cdr-icon cdr-icon--medium cdr-icon--inherit-color"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >



                  <path
                    d="M13.415 12.006l5.295-5.292a1 1 0 00-1.414-1.415L12 10.591 6.71 5.296A1 1 0 005.295 6.71l5.292 5.295-5.295 5.292a1 1 0 101.414 1.414l5.295-5.292 5.292 5.295a1 1 0 001.414-1.414l-5.292-5.294z"
                    role="presentation"
                  />

                  <!--v-if-->
                </svg>



              </button>
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: -32px; padding-right: 0px;"
                tabindex="0"
              >


              </div>
            </div>
          </div>
        </section>
      </div>

    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`CdrModal.vue leaves optional slots empty, handleOpened 1`] = `
<div
  class="cdr-modal"
>
  <div
    class="cdr-modal__outerWrap"
  >
    <div
      aria-hidden="true"
      class="cdr-modal__overlay"
    />
    <div
      tabindex="0"
    />
    <div
      aria-label="Label is the modal title"
      aria-modal="true"
      class="cdr-modal__contentWrap cdr-modal__dialog"
      role="dialog"
      tabindex="-1"
    >

      <div
        class="cdr-modal__innerWrap"
      >
        <section>
          <div
            class="cdr-modal__content"
          >
            <div
              class="cdr-modal__header"
            >
              <div
                class="cdr-modal__title"
              >

                <h1>
                  Label is the modal title
                </h1>

              </div>
              <button
                aria-label="Close"
                class="cdr-button cdr-button--primary cdr-button--icon-only-medium cdr-button--icon-only cdr-button--icon-only cdr-button--with-background cdr-modal__close-button"
                type="button"
              >



                <svg
                  aria-hidden="true"
                  class="cdr-icon cdr-icon--medium cdr-icon--inherit-color"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >



                  <path
                    d="M13.415 12.006l5.295-5.292a1 1 0 00-1.414-1.415L12 10.591 6.71 5.296A1 1 0 005.295 6.71l5.292 5.295-5.295 5.292a1 1 0 101.414 1.414l5.295-5.292 5.292 5.295a1 1 0 001.414-1.414l-5.292-5.294z"
                    role="presentation"
                  />

                  <!--v-if-->
                </svg>


                
              </button>
            </div>
            <div
              class="cdr-modal__text"
              role="document"
            >
              <div
                class="cdr-modal__text-content"
                style="max-height: -80px; padding-right: 0px;"
                tabindex="0"
              >

                Main content

              </div>
            </div>
          </div>
        </section>
      </div>

    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;
